<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_50"
    tools:context=".SignUpActivity1">

    <LinearLayout
        android:id="@+id/linearGroup101"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/gray_50"
        android:gravity="center|top"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/linearGroup99"
            android:layout_width="315dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="45dp"
            android:layout_marginBottom="0dp"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="299dp"
                android:layout_height="114dp"
                android:layout_marginTop="6px"
                android:layout_marginRight="70px"
                app:srcCompat="@drawable/img_microsoftteams" />

            <TextView
                android:id="@+id/txtContact"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10px"
                android:layout_marginTop="120px"
                android:layout_marginEnd="20px"
                android:gravity="center_horizontal"
                android:text="Create your account"
                android:textColor="@color/bluegray_900"
                android:textSize="22sp" />

            <EditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="46dp"
                android:layout_marginStart="17px"
                android:layout_marginTop="70px"
                android:layout_marginEnd="15px"
                android:background="@drawable/rectangle_bg_white_a700_border_gray_500_radius_10"
                android:ellipsize="end"
                android:hint="@string/hint_Name"
                android:paddingStart="17px"
                android:paddingTop="18px"
                android:paddingBottom="19px"
                android:singleLine="true"
                android:textColorHint="@color/gray_500" />

            <EditText
                android:id="@+id/Email"
                android:layout_width="match_parent"
                android:layout_height="46dp"
                android:layout_marginStart="17px"
                android:layout_marginTop="70px"
                android:layout_marginEnd="15px"
                android:background="@drawable/rectangle_bg_white_a700_border_gray_500_radius_10"
                android:ellipsize="end"
                android:hint="@string/hint_email"
                android:paddingStart="17px"
                android:paddingTop="18px"
                android:paddingBottom="19px"
                android:singleLine="true"
                android:textColorHint="@color/gray_500" />

            <EditText
                android:id="@+id/Phone"
                android:layout_width="match_parent"
                android:layout_height="46dp"
                android:layout_marginStart="17px"
                android:layout_marginTop="70px"
                android:layout_marginEnd="15px"
                android:background="@drawable/rectangle_bg_white_a700_border_gray_500_radius_10"
                android:ellipsize="end"
                android:hint="@string/hint_Phone"
                android:numeric="integer"
                android:paddingStart="17px"
                android:paddingTop="18px"
                android:paddingBottom="19px"
                android:singleLine="true"
                android:textColorHint="@color/gray_500" />

            <LinearLayout
                android:layout_width="304dp"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Spinner
                    android:id="@+id/Gender"
                    android:layout_width="297dp"
                    android:layout_height="46dp"
                    android:layout_marginTop="68px"
                    android:layout_weight="1"
                    android:background="@drawable/rectangle_bg_white_a700_border_gray_500_radius_10"
                    android:entries="@array/Gender"
                    android:prompt="@string/hint_Gender"
                    android:spinnerMode="dropdown"
                    app:layout_constraintBottom_toTopOf="@id/txtContact"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.589"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/Birthday"
                    android:layout_width="match_parent"
                    android:layout_height="46dp"
                    android:layout_marginStart="17px"
                    android:layout_marginTop="70px"
                    android:layout_marginBottom="20px"
                    android:layout_weight="1"
                    android:background="@drawable/rectangle_bg_white_a700_border_gray_500_radius_10"
                    android:ellipsize="end"
                    android:hint="@string/hint_Birthday"
                    android:paddingStart="17px"
                    android:paddingTop="18px"
                    android:paddingBottom="19px"
                    android:singleLine="true"
                    android:textColorHint="@color/gray_500" />
            </LinearLayout>

        </LinearLayout>

        <FrameLayout
            android:id="@+id/frameGroup102"
            android:layout_width="317dp"
            android:layout_height="87dp"
            android:layout_gravity="center"
            android:layout_marginStart="10px"
            android:layout_marginTop="70px"
            android:layout_marginEnd="10px"
            android:layout_marginBottom="20px">

            <Button
                android:id="@+id/NextC"
                android:layout_width="300dp"
                android:layout_height="41dp"
                android:layout_gravity="center|top"
                android:layout_marginTop="3px"
                android:layout_marginBottom="10px"
                android:background="@drawable/rectangle_bg_bluegray_600_radius_53"
                android:text="Next"
                app:backgroundTint="@color/bluegray_600" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="50dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txtDontHaveAnA"
                    android:layout_width="wrap_content"
                    android:layout_height="34dp"
                    android:gravity="center"
                    android:text="don't have an account? "
                    android:textSize="17sp" />

                <TextView
                    android:id="@+id/txtDontHaveAnA3"
                    android:layout_width="wrap_content"
                    android:layout_height="34dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:onClick="move_signin"
                    android:text="Sign In"
                    android:textColor="@color/blue_900"
                    android:textSize="17sp" />
            </LinearLayout>

        </FrameLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>