<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity2">

    <LinearLayout
        android:id="@+id/linearGroup101"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/gray_50"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_goneMarginEnd="10dp">

        <LinearLayout
            android:id="@+id/linearGroup99"
            android:layout_width="315dp"
            android:layout_height="wrap_content"
            android:layout_margin="60dp"
            android:layout_marginStart="15dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="300px"
            android:layout_marginEnd="-10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="0dp"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="299dp"
                android:layout_height="114dp"
                android:layout_marginTop="6px"
                android:layout_marginRight="70px"
                app:srcCompat="@drawable/img_microsoftteams" />

            <TextView
                android:id="@+id/txtContact"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10px"
                android:layout_marginTop="120px"
                android:layout_marginEnd="20px"
                android:gravity="center_horizontal"
                android:text="Create your account"
                android:textColor="@color/bluegray_900"
                android:textSize="22sp" />

            <EditText
                android:id="@+id/UserId"
                android:layout_width="match_parent"
                android:layout_height="46dp"
                android:layout_marginStart="17px"
                android:layout_marginTop="95px"
                android:layout_marginEnd="15px"
                android:background="@drawable/rectangle_bg_white_a700_border_gray_500_radius_10"
                android:ellipsize="end"
                android:hint="@string/hint_National"
                android:numeric="integer"
                android:paddingStart="17px"
                android:paddingTop="18px"
                android:paddingBottom="19px"
                android:singleLine="true"
                android:textColorHint="@color/gray_500" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:layout_marginTop="95px"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/City"
                    android:layout_width="match_parent"
                    android:layout_height="46dp"
                    android:layout_marginStart="17px"
                    android:layout_marginEnd="15px"
                    android:layout_marginBottom="20px"
                    android:layout_weight="1"
                    android:background="@drawable/rectangle_bg_white_a700_border_gray_500_radius_10"
                    android:ellipsize="end"
                    android:hint="@string/hint_City"
                    android:numeric="integer"
                    android:paddingStart="17px"
                    android:paddingTop="18px"
                    android:paddingBottom="19px"
                    android:singleLine="true"
                    android:textColorHint="@color/gray_500" />

                <EditText
                    android:id="@+id/Address"
                    android:layout_width="match_parent"
                    android:layout_height="46dp"
                    android:layout_marginStart="17px"
                    android:layout_marginEnd="15px"
                    android:layout_marginBottom="20px"
                    android:layout_weight="1"
                    android:background="@drawable/rectangle_bg_white_a700_border_gray_500_radius_10"
                    android:ellipsize="end"
                    android:hint="@string/hint_Address"
                    android:numeric="integer"
                    android:paddingStart="17px"
                    android:paddingTop="18px"
                    android:paddingBottom="19px"
                    android:singleLine="true"
                    android:textColorHint="@color/gray_500" />
            </LinearLayout>

            <EditText
                android:id="@+id/PasswordC"
                android:layout_width="match_parent"
                android:layout_height="46dp"
                android:layout_marginStart="17px"
                android:layout_marginTop="95px"
                android:layout_marginEnd="15px"
                android:background="@drawable/rectangle_bg_white_a700_border_gray_500_radius_10"
                android:ellipsize="end"
                android:hint="@string/hint_pass"
                android:numeric="integer"
                android:paddingStart="17px"
                android:paddingBottom="19px"
                android:singleLine="true"
                android:textColorHint="@color/gray_500" />

            <EditText
                android:id="@+id/ConfirmPC"
                android:layout_width="match_parent"
                android:layout_height="46dp"
                android:layout_marginStart="17px"
                android:layout_marginTop="95px"
                android:layout_marginEnd="15px"
                android:background="@drawable/rectangle_bg_white_a700_border_gray_500_radius_10"
                android:ellipsize="end"
                android:hint="@string/hint_Confirm"
                android:numeric="integer"
                android:paddingStart="17px"
                android:paddingBottom="19px"
                android:singleLine="true"
                android:textColorHint="@color/gray_500" />

        </LinearLayout>

        <FrameLayout
            android:id="@+id/frameGroup102"
            android:layout_width="317dp"
            android:layout_height="87dp"
            android:layout_gravity="center|center_horizontal"
            android:layout_marginStart="10px"
            android:layout_marginTop="-80px"
            android:layout_marginEnd="10px"
            android:layout_marginBottom="20px">

            <Button
                android:id="@+id/CreatAccount"
                android:layout_width="300dp"
                android:layout_height="41dp"
                android:layout_gravity="center|top"
                android:layout_marginTop="3px"
                android:layout_marginBottom="10px"
                android:background="@drawable/rectangle_bg_bluegray_600_radius_53"
                android:text="Create Account"
                app:backgroundTint="@color/bluegray_600" />

            <LinearLayout
                android:id="@+id/linearGroup103"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="40px"
                android:layout_marginEnd="40px"
                android:gravity="center"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="246dp"
                    android:layout_height="match_parent"
                    android:gravity="center_horizontal"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/txtDontHaveAnA"
                        android:layout_width="wrap_content"
                        android:layout_height="34dp"
                        android:layout_marginTop="50px"
                        android:gravity="center"
                        android:text="Have an account? "
                        android:textSize="17sp" />

                    <TextView
                        android:id="@+id/txtDontHaveAnA3"
                        android:layout_width="149dp"
                        android:layout_height="34dp"
                        android:layout_marginTop="50px"
                        android:layout_weight="1"
                        android:gravity="center|left"
                        android:text="Sign In"
                        android:textColor="@color/blue_900"
                        android:textSize="17sp" />
                </LinearLayout>

            </LinearLayout>
        </FrameLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>